--- a/ErasmusWebiste/abtUs.html
+++ b/ErasmusWebiste/abtUs.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+</head>
+<body>
 
     <img style="background-color:  rgba(138, 72, 52, 0.541); position:absolute;top:1400px;width: 100%;height: 300px;left: 0px;">
     <img style="background-color: black; position: absolute;top: 1440px;width: 96%;height: 5px;left: 30px;">
@@ -16,29 +18,30 @@
         <h1 style="position: absolute;left: 80px;top: 200px;">Here</h1>
         <p style="position: absolute;left: 70px;top: 250px;width: 66.7%;font-size:larger;">And Here</p>
 
-            <header>
-            <header>
+    <img style="background-color: rgb(100, 100, 100); position:fixed; left: 0; top: 0; width: 100%; height: 83px; user-select: none;">
+    <div class="main-div">
+        <header style="background-color: rgb(100, 100, 100); position:fixed; left:0px; top:0px; width:100%; height:80px;">
+            <header style="position: relative">
                 <a href="index.html">
-                    <img src="images/finalLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
                 </a>
                 <div class="navbar">
-                    <a href="index.html" style="position:absolute;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
-                    <a href="news.html"style="position:absolute;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>
+                    <a href="index.html" style="position:absolute ;height: 30px;width: 100px;top: 23px;left: 62px;"><span>Home</span></a>
+                    <a href="news.html"style="position:absolute ;height: 30px;width: 100px;top: 23px;left: 196px;"><span>News</span></a>                     
                     <div class="dropdown">
-                        <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 360px;">
+                        <button class="dropbtn"style="position:absolute; height:60px; width:180px; top:23px; left: 340px;">
                             About Us
                         </button>
-                        <div class="dropdown-content"style="position:absolute;height: 250px;width: 180px;top: 80px;left: 360px;">
+                        <div class="dropdown-content"style="position:absolute; height:220px; width:200px; top: 83px;left: 330px;">
                             <a href="abtUs.html">About Us</a>
                             <a href="faq.html">FAQ</a>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="contact.html" style="height: 80px;">Contact Us</a>
                         </div>
                     </div>
                     <div class="dropdown_projects">
-                        <button class="dropbtn_projects"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
+                        <button class="dropbtn_projects"style="position:absolute ;height: 60px;width: 180px;top: 23px;left: 520px;">
                             Projects
                         </button>
-                        <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 80px;left: 540px;">
+                        <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 83px;left: 510px;">
                             <a href="24.html">2024/2025</a>
                             <a href="25.html">2025/2026</a>
                             <a href="26.html">2026/2027</a>
@@ -49,27 +52,24 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
+                        <a class="profile_picture" href="profile.html" style="position: absolute; padding: 0px; top: 9px; left: 1840px; height: 60px; width: 60px; ">
                         <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
                         </a>
-                        <div class="dropdown-content"style="position:absolute;height: 332px;width: 180px;top: 69px;left: 1705px;">
+                        <div class="dropdown-content"style="position:absolute;height: 280px;width: 180px;top: 70px;left: 1735px;">
                             <a href="login_page.html">Login</a>
                             <a href="settings.html">Settings</a>
                             <a href="account.html">Account</a>
                             <a href="languages.html">Language</a>
                         </div>
-                    </div>  
-                    <div class="search-bar">
-                        <input style="position: fixed; left: 1250px; width: 400px; top: 13px;border-radius: 100px;font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
-                        <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: fixed; top: 20px; left: 1630px; height: 30px; width: 30px;" onclick="search()">
-                            <img src="images/magnifying-glass.webp" style="height: 28px;width: 28px;" alt="⌕">
+                    </div>
+                    <div class="search_bar">
+                        <input style="position: absolute; left: 1400px; width: 400px; top: 13px;border-radius: 100px;border-width: 3px; border-color: rgb(151, 151, 151);   font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
+                        <a href="search.html" class="search_glass" style="border-radius: 14px; padding: 0px; position: absolute; top: 21px; left: 1780px; height: 30px; width: 30px;" onclick="search()">
+                            <img src="images/magnifying-glass.webp" style="height: 30px;width: 30px;" alt="⌕">
                         </a>
                     </div>
                 </div>
-            </header> 
-            <div class="container">
-            </div>
-        
+            </header>         
             <script>
                 function search() {
                     const searchTerm = document.getElementById('searchInput').value;
@@ -78,9 +78,6 @@
                 }   
             </script>
         </header>
-        </body>
-        
-</head>
-        <body>
-        </body>
+        </div>
+   </body>
 </html>
