--- a/ErasmusWebiste/signup_page.html
+++ b/ErasmusWebiste/signup_page.html
@@ -5,80 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    
-           <header>
-            <a href="index.html"><img src="images/logo.png" alt="logo" style="height: 60px; width: 90px; margin: 2px 10px;"></a>
-            <a href="index.html"><button style="position: fixed;left: 100px;top: 10px;height: 45px;width: 150px;">Home</button></a>
-            <a href="news.html"><button style="position: fixed;left: 260px;top: 10px;height: 45px;width: 150px;">Search</button></a>
-            <a href="login_page.html"><button style="position: fixed;left: 740px;top: 10px;height: 45px;width: 150px;">Log in</button></a>
-        </header>
 </head>
 <body>
-    <header>
-            <header>
-                <a href="index.html">
-                    <img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
-                </a>
-                <div class="navbar">
-                    <a href="index.html" style="position:absolute;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
-                    <a href="news.html"style="position:absolute;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>
-                    <div class="dropdown">
-                        <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 360px;">
-                            About Us
-                        </button>
-                        <div class="dropdown-content"style="position:absolute;height: 250px;width: 180px;top: 80px;left: 360px;">
-                            <a href="abtUs.html">About Us</a>
-                            <a href="faq.html">FAQ</a>
-                            <a href="contact.html">Contact Us</a>
-                        </div>
-                    </div>
-                    <div class="dropdown_projects">
-                        <button class="dropbtn_projects"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
-                            Projects
-                        </button>
-                        <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 80px;left: 540px;">
-                            <a href="24.html">2024/2025</a>
-                            <a href="25.html">2025/2026</a>
-                            <a href="26.html">2026/2027</a>
-                            <a href="27.html">2027/2028</a>
-                            <a href="28.html">2028/2029</a>
-                            <a href="29.html">2029/2030</a>
-                            <a href="30.html">2030/2031</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="login_page.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
-                        <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
-                        </a>
-                        <div class="dropdown-content"style="position:absolute;height: 332px;width: 180px;top: 69px;left: 1705px;">
-                            <a href="login_page.html">Login</a>
-                            <a href="settings.html">Settings</a>
-                            <a href="account.html">Account</a>
-                            <a href="languages.html">Language</a>
-                        </div>
-                    </div>
-                    <div class="search-bar">
-                        <input style="position: fixed; left: 1250px; width: 400px; top: 13px;border-radius: 100px;font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
-                        <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: fixed; top: 20px; left: 1630px; height: 30px; width: 30px;" onclick="search()">
-                            <img src="images/magnifying-glass.webp" style="height: 28px;width: 28px;" alt="⌕">
-                        </a>                    
+    <img style="background-color: rgb(100, 100, 100); position:fixed; left: 0; top: 0; width: 100%; height: 83px; user-select: none;">
+    <div class="main-div">
+    <header style="background-color: rgb(100, 100, 100); position:fixed; left:0px; top:0px; width:100%; height:80px;">
+        <header style="position: relative">
+            <a href="index.html">
+            </a>
+            <div class="navbar">
+                <a href="index.html" style="position:absolute ;height: 30px;width: 100px;top: 23px;left: 62px;"><span>Home</span></a>
+                <a href="news.html"style="position:absolute ;height: 30px;width: 100px;top: 23px;left: 196px;"><span>News</span></a>                     
+                <div class="dropdown">
+                    <button class="dropbtn"style="position:absolute; height:60px; width:180px; top:23px; left: 340px;">
+                        About Us
+                    </button>
+                    <div class="dropdown-content"style="position:absolute; height:220px; width:200px; top: 83px;left: 330px;">
+                        <a href="abtUs.html">About Us</a>
+                        <a href="faq.html">FAQ</a>
+                        <a href="contact.html" style="height: 80px;">Contact Us</a>
                     </div>
                 </div>
-            </header> 
-            <div class="container">
+                <div class="dropdown_projects">
+                    <button class="dropbtn_projects"style="position:absolute ;height: 60px;width: 180px;top: 23px;left: 520px;">
+                        Projects
+                    </button>
+                    <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 83px;left: 510px;">
+                        <a href="24.html">2024/2025</a>
+                        <a href="25.html">2025/2026</a>
+                        <a href="26.html">2026/2027</a>
+                        <a href="27.html">2027/2028</a>
+                        <a href="28.html">2028/2029</a>
+                        <a href="29.html">2029/2030</a>
+                        <a href="30.html">2030/2031</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <a class="profile_picture" href="profile.html" style="position: absolute; padding: 0px; top: 9px; left: 1840px; height: 60px; width: 60px; ">
+                    <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
+                    </a>
+                    <div class="dropdown-content"style="position:absolute;height: 280px;width: 180px;top: 70px;left: 1735px;">
+                        <a href="login_page.html">Login</a>
+                        <a href="settings.html">Settings</a>
+                        <a href="account.html">Account</a>
+                        <a href="languages.html">Language</a>
+                    </div>
+                </div>
+                <div class="search_bar">
+                    <input style="position: absolute; left: 1400px; width: 400px; top: 13px;border-radius: 100px;border-width: 3px; border-color: rgb(151, 151, 151);   font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
+                    <a href="search.html" class="search_glass" style="border-radius: 14px; padding: 0px; position: absolute; top: 21px; left: 1780px; height: 30px; width: 30px;" onclick="search()">
+                        <img src="images/magnifying-glass.webp" style="height: 30px;width: 30px;" alt="⌕">
+                    </a>
+                </div>
             </div>
-        
-            <script>
-                function search() {
-                    const searchTerm = document.getElementById('searchInput').value;
-                    alert(`Searching for: ${searchTerm}`);
-                    document.getElementById('searchInput').value = "";
-                }   
-            </script>
-        </header>
-
-    <h1>Create an Account</h1>
-
+        </header>         
+        <script>
+            function search() {
+                const searchTerm = document.getElementById('searchInput').value;
+                alert(`Searching for: ${searchTerm}`);
+                document.getElementById('searchInput').value = "";
+            }   
+        </script>
+    </header>
+</div>
     <div class="signup-box">
         <form>
             <input type="text" placeholder="Your Name" required class="input-box">
@@ -92,7 +81,5 @@
             <a href="login_page.html"> <button style="position: fixed;left: 1100px;top: 380px;height: 40px;width: 100px;">Log in</button></a>
         </form>
     </div>
-
-    <div class="right-box"></div></body>
 </body>
 </html>
